--- a/backend/scripts/random_forest.ipynb
+++ b/backend/scripts/random_forest.ipynb
@@ -10,17 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dc55e15a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import necessary libraries for data manipulation, visualization, and modeling\n",
-    "# pandas/numpy: Data handling and numerical operations\n",
-    "# matplotlib/seaborn: Data visualization\n",
-    "# sklearn: Machine learning tools (Random Forest, metrics, cross-validation)\n",
-    "# joblib: Model serialization for saving trained models\n",
-    "\n",
+    "# Import required libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -39,14 +34,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the preprocessed dataset\n",
-    "# This file contains cleaned and feature-engineered data ready for modeling\n",
+    "# Load processed dataset\n",
     "fp = pd.read_csv(\"../data/women_risk_processed.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2539c6f1",
    "metadata": {},
    "outputs": [
@@ -256,13 +250,13 @@
     }
    ],
    "source": [
-    "# Preview the first few rows of the dataset\n",
+    "# Display first few rows\n",
     "fp.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "09b065da",
    "metadata": {},
    "outputs": [
@@ -278,7 +272,7 @@
     }
    ],
    "source": [
-    "# Check the dimensions of the dataset (rows, columns)\n",
+    "# Check dataset dimensions\n",
     "fp.shape"
    ]
   },
@@ -289,13 +283,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prepare features (X) and target variable (y)\n",
-    "# Target: Overall risk level rating column\n",
+    "# Separate features and target, convert to binary classification\n",
     "target_col = '12. Overall, how would you rate the risk level of harassment in that situation?'\n",
-    "X = fp.drop(target_col, axis=1)  # All features except target\n",
-    "y = fp[target_col]  # Target variable\n",
-    "\n",
-    "# Convert to binary classification: 1 if above median (high risk), 0 otherwise (low risk)\n",
+    "X = fp.drop(target_col, axis=1)\n",
+    "y = fp[target_col]\n",
     "y = (y > y.median()).astype(int)"
    ]
   },
@@ -306,9 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split data into training (80%) and testing (20%) sets\n",
-    "# stratify=y ensures balanced class distribution in both sets\n",
-    "# random_state=42 for reproducibility\n",
+    "# Split data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)"
    ]
   },
@@ -319,14 +308,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize Random Forest Classifier with default hyperparameters\n",
-    "# Random Forest is an ensemble of decision trees that reduces overfitting\n",
+    "# Initialize Random Forest model\n",
     "model = RandomForestClassifier(random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d44c25ee",
    "metadata": {},
    "outputs": [
@@ -1324,8 +1312,7 @@
     }
    ],
    "source": [
-    "# Train the Random Forest model on the training data\n",
-    "# The model builds multiple decision trees and aggregates their predictions\n",
+    "# Train the model\n",
     "model.fit(X_train, y_train)"
    ]
   },
@@ -1336,16 +1323,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make predictions on the test set\n",
-    "# y_pred: Binary predictions (0 or 1)\n",
-    "# y_pred_proba: Probability of positive class (for ROC-AUC calculation)\n",
+    "# Make predictions on test set\n",
     "y_pred = model.predict(X_test)\n",
     "y_pred_proba = model.predict_proba(X_test)[:, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "39e7e8ef",
    "metadata": {},
    "outputs": [
@@ -1361,13 +1346,13 @@
     }
    ],
    "source": [
-    "# Calculate Accuracy: Proportion of correct predictions\n",
+    "# Calculate accuracy\n",
     "accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d97894b9",
    "metadata": {},
    "outputs": [
@@ -1383,14 +1368,13 @@
     }
    ],
    "source": [
-    "# Calculate Precision: Proportion of positive predictions that are correct\n",
-    "# High precision = fewer false positives\n",
+    "# Calculate precision\n",
     "precision_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "7e02dbe9",
    "metadata": {},
    "outputs": [
@@ -1406,14 +1390,13 @@
     }
    ],
    "source": [
-    "# Calculate Recall (Sensitivity): Proportion of actual positives correctly identified\n",
-    "# High recall = fewer false negatives\n",
+    "# Calculate recall\n",
     "recall_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ea167bbd",
    "metadata": {},
    "outputs": [
@@ -1429,14 +1412,13 @@
     }
    ],
    "source": [
-    "# Calculate F1-Score: Harmonic mean of precision and recall\n",
-    "# Balances both metrics (useful for imbalanced datasets)\n",
+    "# Calculate F1-score\n",
     "f1_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "06d9673c",
    "metadata": {},
    "outputs": [
@@ -1452,14 +1434,13 @@
     }
    ],
    "source": [
-    "# Calculate ROC-AUC Score: Model's ability to distinguish between classes\n",
-    "# Score of 1.0 = perfect classifier, 0.5 = random classifier\n",
+    "# Calculate ROC-AUC score\n",
     "roc_auc_score(y_test, y_pred_proba)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "20a647f7",
    "metadata": {},
    "outputs": [
@@ -1475,13 +1456,13 @@
     }
    ],
    "source": [
-    "# Display comprehensive classification report with all metrics\n",
+    "# Display classification report\n",
     "classification_report(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "96c6d9f1",
    "metadata": {},
    "outputs": [
@@ -1497,8 +1478,7 @@
     }
    ],
    "source": [
-    "# Visualize Confusion Matrix\n",
-    "# Shows the distribution of true positives, true negatives, false positives, and false negatives\n",
+    "# Visualize confusion matrix\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "plt.figure(figsize=(6, 4))\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
@@ -1510,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "22707e4e",
    "metadata": {},
    "outputs": [
@@ -1526,9 +1506,7 @@
     }
    ],
    "source": [
-    "# Plot ROC Curve (Receiver Operating Characteristic)\n",
-    "# Visualizes the trade-off between true positive rate and false positive rate\n",
-    "# Higher AUC (Area Under Curve) indicates better model performance\n",
+    "# Plot ROC curve\n",
     "fpr, tpr, thresholds = roc_curve(y_test, y_pred_proba)\n",
     "roc_auc = roc_auc_score(y_test, y_pred_proba)\n",
     "\n",
@@ -1544,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "00f32e07",
    "metadata": {},
    "outputs": [
@@ -1560,9 +1538,7 @@
     }
    ],
    "source": [
-    "# Analyze Feature Importance\n",
-    "# Random Forest provides insight into which features contribute most to predictions\n",
-    "# Higher importance = more influential in the model's decision-making\n",
+    "# Visualize feature importance\n",
     "feature_importance = pd.DataFrame({'feature': X.columns, 'importance': model.feature_importances_})\n",
     "feature_importance = feature_importance.sort_values('importance', ascending=False).head(10)\n",
     "\n",
@@ -1590,10 +1566,6 @@
    "outputs": [],
    "source": [
     "# Define hyperparameter grid for tuning\n",
-    "# n_estimators: Number of trees in the forest (more trees = better performance but slower)\n",
-    "# max_depth: Maximum depth of each tree (controls overfitting)\n",
-    "# min_samples_split: Minimum samples required to split a node\n",
-    "# min_samples_leaf: Minimum samples required at leaf node\n",
     "param_grid = {\n",
     "    \"n_estimators\": [50, 100, 200],\n",
     "    \"max_depth\": [None, 5, 10, 15],\n",
@@ -1610,15 +1582,12 @@
    "outputs": [],
    "source": [
     "# Initialize GridSearchCV for hyperparameter tuning\n",
-    "# cv=5: 5-fold cross-validation\n",
-    "# scoring='accuracy': Optimize for accuracy\n",
-    "# n_jobs=-1: Use all available CPU cores for parallel processing\n",
     "grid = GridSearchCV(RandomForestClassifier(random_state=42), param_grid, cv=5, scoring='accuracy', n_jobs=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "5483ad74",
    "metadata": {},
    "outputs": [
@@ -2796,14 +2765,13 @@
     }
    ],
    "source": [
-    "# Train the model with all hyperparameter combinations using cross-validation\n",
-    "# This will find the best combination of parameters\n",
+    "# Train model with hyperparameter tuning\n",
     "grid.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "368e38de",
    "metadata": {},
    "outputs": [
@@ -2817,7 +2785,7 @@
     }
    ],
    "source": [
-    "# Display the best hyperparameters and their cross-validation accuracy\n",
+    "# Display best hyperparameters\n",
     "print(\"Best parameters:\", grid.best_params_)\n",
     "print(\"Best CV accuracy:\", grid.best_score_)"
    ]
@@ -2829,7 +2797,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract the best model from GridSearchCV\n",
+    "# Get best model\n",
     "best_model = grid.best_estimator_"
    ]
   },
@@ -2840,14 +2808,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make predictions using the tuned model\n",
+    "# Make predictions with tuned model\n",
     "y_pred_tuned = best_model.predict(X_test)\n",
     "y_pred_proba_tuned = best_model.predict_proba(X_test)[:, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "6c14ffaa",
    "metadata": {},
    "outputs": [
@@ -2863,13 +2831,13 @@
     }
    ],
    "source": [
-    "# Calculate accuracy of the tuned model\n",
+    "# Calculate accuracy of tuned model\n",
     "accuracy_score(y_test, y_pred_tuned)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "882e703b",
    "metadata": {},
    "outputs": [
@@ -2885,13 +2853,13 @@
     }
    ],
    "source": [
-    "# Display classification report for the tuned model\n",
+    "# Display classification report for tuned model\n",
     "classification_report(y_test, y_pred_tuned)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "9a14b6c9",
    "metadata": {},
    "outputs": [
@@ -2907,7 +2875,7 @@
     }
    ],
    "source": [
-    "# Visualize confusion matrix for the tuned model\n",
+    "# Visualize confusion matrix for tuned model\n",
     "cm_tuned = confusion_matrix(y_test, y_pred_tuned)\n",
     "plt.figure(figsize=(6, 4))\n",
     "sns.heatmap(cm_tuned, annot=True, fmt='d', cmap='Greens')\n",
@@ -2919,7 +2887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "c01f911e",
    "metadata": {},
    "outputs": [
@@ -2935,8 +2903,7 @@
     }
    ],
    "source": [
-    "# Compare model performance before and after hyperparameter tuning\n",
-    "# Visualize all metrics side by side to see improvement\n",
+    "# Compare model performance before and after tuning\n",
     "metrics = ['Accuracy', 'Precision', 'Recall', 'F1-Score', 'ROC-AUC']\n",
     "before = [accuracy_score(y_test, y_pred), precision_score(y_test, y_pred), \n",
     "          recall_score(y_test, y_pred), f1_score(y_test, y_pred), roc_auc_score(y_test, y_pred_proba)]\n",
@@ -2968,7 +2935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "b2bb7c16",
    "metadata": {},
    "outputs": [
@@ -2981,9 +2948,7 @@
     }
    ],
    "source": [
-    "# Save the trained model to disk for later use\n",
-    "# Creates the models directory if it doesn't exist\n",
-    "# Saves the best model as a pickle file\n",
+    "# Save the trained model\n",
     "os.makedirs('../models', exist_ok=True)\n",
     "joblib.dump(best_model, '../models/random_forest_model.pkl')\n",
     "print(\"Model saved!\")"
